62) kernel: compiler.h: add support for malloc attribute.<br>
63) kernel: mm: fix page_group_by_mobility_disabled breakage.<br>
64) kernel: ext4: fix NULL pointer dereference in ext4_mark_inode_dirty().<br>
65) kernel: bio: return EINTR if copying to user space got interrupted.<br>
66) kernel: fs/exec.c: fix minor memory leak.<br>
67) kernel: mips: reimplement get_cycles().<br>
68) kernel: mips: mm: c-r4k: panic if IL or DL fields have a reserved value.<br>
69) kernel: mips: allow emulation for unaligned [LS]DXC1 instructions.<br>
70) kernel: usb: option: add D-Link DWM-221 B1 device id.<br>
71) kernel: usb: cdc_mbim: apply NDP to end quirk to all Huawei devices.<br>
72) kernel: usb: cdc-acm: more sanity checking.<br>
73) kernel: net: ipv6: count in extension headers in skb->network_header.<br>
74) kernel: net: ipv6: recursive check rt->dst.from when call rt6_check_expired.<br>
75) kernel: net: xfrm: fix crash observed during device unregistration and decryption.<br>
76) kernel: net: ethtool: fix phy adress get from user.<br>
77) kernel: net: ethtool: issue with querying phy settings.<br>
78) kernel: net: fix net_gso_ok for new GSO types.<br>
79) kernel: net: netfilter: x_tables: fix unconditional helper.<br>
80) kernel: net: netfilter: x_tables: make sure e->next_offset covers remaining blob size.<br>
81) kernel: net: validate variable length ll headers.<br>
82) kernel: net: make *sfhash and real small functions in conntrack always inline (small optimize).<br>
83) kernel: net: fq_codel: explicitly reset flows in ->reset().<br>
84) kernel: net: ppp: take reference on channels netns.<br>
85) kernel: net: bridge: fix old ioctl unlocked net device walk.<br>
86) kernel: net: bridge: fix igmp / mld query parsing.<br>
87) kernel: net: bridge: fix igmpv3 / mldv2 report parsing.<br>
88) kernel: net: bridge: fix potential use-after-free when hook returns QUEUE or STOLEN verdict.<br>
89) kernel: net: revert - mld, igmp: fix reserved tailroom calculation.<br>
<br>
<br>
<br>