@@ -166,11 +166,11 @@ void __init prom_meminit(void)
 #endif	/* CONFIG_RAM_SIZE_AUTO */
 #if defined(CONFIG_RALINK_MT7621)
 	if (ramsize > 0x1c000000) {
-		/* 1. Normal 0..448MB */
+		/* 1. Normal region 0..448MB */
 		add_memory_region(RAM_BASE, 0x1c000000, BOOT_MEM_RAM);
 #if defined(CONFIG_RT2880_DRAM_512M) && defined(CONFIG_HIGHMEM)
-		/* 2. Highmem (reserved yet, need highmem patch from MTI) */
-		//add_memory_region(0x20000000, (ramsize - 0x1c000000), BOOT_MEM_RAM);
+		/* 2. Highmem region */
+		add_memory_region(0x20000000, (ramsize - 0x1c000000), BOOT_MEM_RAM);
 #endif
 	} else
 #endif
